--- a/package.json
+++ b/package.json
@@ -30,5 +30,20 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-html-replace": "^1.6.2"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": 6,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
+    "rules": {
+      "semi": 2
+    },
+    "env": {
+      "es6": true
+    }
   }
 }
