--- a/package.json
+++ b/package.json
@@ -22,28 +22,15 @@
   },
   "homepage": "https://github.com/martin-arusalu/moon-jumper#readme",
   "devDependencies": {
-    "eslint": "^5.6.1",
+    "eslint": "^5.7.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "gulp-webserver": "^0.9.1"
   },
   "dependencies": {
+    "createjs": "^1.0.1",
     "gulp": "^3.9.1",
-    "gulp-html-replace": "^1.6.2"
-  },
-  "eslintConfig": {
-    "parserOptions": {
-      "ecmaVersion": 6,
-      "sourceType": "module",
-      "ecmaFeatures": {
-        "jsx": true
-      }
-    },
-    "rules": {
-      "semi": 2
-    },
-    "env": {
-      "es6": true
-    }
+    "gulp-html-replace": "^1.6.2",
+    "rxjs": "^6.3.3"
   }
 }
